--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <!-- Tells the browser how to read this document -->
     <meta charset="utf-8">
     <!-- The title = what goes on the tab -->
-    <title>* YOUR NAME GOES HERE *</title>
+    <title>* Christina Lam *</title>
 
     <!-- Links to where you've put the styles of your page -->
     <link rel="stylesheet" href="styles.css">
